...

#Preview(as: .systemSmall) {
    CountdownWidget()
} timeline: {
    SimpleEntry(
        date: .now,
        title: "Vacation",
        dateText: "Nov 19, 2025",
        countdownNumber: 10,
        mode: .future,
        eventColorHex: "#0A84FF"
    )
    SimpleEntry(
...
